[package]
name = "browser-test"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/browser-test"
description = "Small helpers for async browser-driven integration tests."
categories = ["development-tools::testing", "web-programming"]
keywords = ["browser", "webdriver", "chrome", "testing", "automation"]
exclude = [".idea", ".claude", ".vscode", "AGENTS.md", "CLAUDE.md", "Justfile"]

[dependencies]
async-trait = "0.1.83"
chrome-for-testing-manager = { version = "0.9.1", default-features = false, features = ["thirtyfour"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
rootcause = { version = "0.12.1", default-features = false }
thirtyfour = { version = "0.36.1", default-features = false, features = ["component", "reqwest", "rustls-tls"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = ["rt", "io-std", "io-util"] }
tracing = "0.1.41"
typed-builder = "0.23.2"

[dev-dependencies]
assertr = "0.5.6"
serial_test = "3.4.0"
tokio = { version = "1.52.1", default-features = false, features = ["macros", "rt-multi-thread"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
