[package]
name = "browser-test-minimal-example"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
publish = false

[dependencies]
browser-test = { path = "../.." }
rootcause = "0.12.1"
tokio = { version = "1.50.0", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "fmt", "registry"] }
